fix spacing css

--- a/src/base.scss
+++ b/src/base.scss
@@ -110,8 +110,8 @@ header.main {
 	width: 7ch;
 
 	@media (min-width: 600px) {
-	font-size: 1.375em;
-	width: 10ch;
+		font-size: 1.375em;
+		width: 10ch;
 	}
 }
 
@@ -195,7 +195,6 @@ header.main {
 	box-shadow: 0px 5px 20px rgba(var(--foreground), 0.15);
 	color: rgb(var(--foreground));
 	display: block;
-	font-family: inherit;
 	margin-bottom: 1em;
 	transition: all 100ms ease-out;
 	text-decoration: none;
@@ -206,14 +205,14 @@ header.main {
 
 	&:hover,
 	&:focus {
-	box-shadow: 0px 5px 25px rgba(var(--foreground), 0.2);
-	text-decoration: underline;
-	transform: translateY(-.1em);
+		box-shadow: 0px 5px 25px rgba(var(--foreground), 0.2);
+		text-decoration: underline;
+		transform: translateY(-.1em);
 	}
 
 	@media (min-width: 768px) {
-	padding: 1em;
-	margin-top: 2em;
+		padding: 1em;
+		margin-top: 2em;
 	}
 
 	&__text {
